# debtector

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.es.md  README.md  TODO.md  pyproject.toml  sonar-project.properties
.codeindex/: .gitignore  index.db
.debtector/: .gitignore  baseline.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture.es.md  architecture.md  audit-schema.md  codeindex-informe.md  coupling-metrics-research.md  research-temporal-coupling-ci.md
docs/decisions/: 001-semantic-search.md  002-pivot-ci-coupling.md  003-audit-as-second-surface.md
scripts/: check_ia_attrib.sh
src/codeindex/: __init__.py  cli.py  config.py  embedder.py  gitfilter.py  graph_store.py  indexer.py  logging.py  metrics.py  models.py  utils.py
src/codeindex/parser/: __init__.py  base.py  js_parser.py  python_parser.py
src/codeindex/skills/: codeindex-bootstrap.md  codeindex.md
src/debtector/: __init__.py  cli.py  config.py  embedder.py  git_history.py  graph_store.py  indexer.py  logging.py  metrics.py  models.py  utils.py
src/debtector/audit/: __init__.py  cycle_priority.py  health_score.py  lcom4.py  testrisk.py
src/debtector/parser/: __init__.py  base.py  js_parser.py  python_parser.py
tests/: conftest.py  test_ci_reporter.py  test_cli_audit.py  test_cli_baseline.py  test_cli_git.py  test_cli_human.py  test_cli_init.py  test_cli_json.py  test_cli_metrics.py  test_codeindexignore.py  test_config.py  test_covers.py  test_fts.py  test_git_history.py  test_gitfilter.py  test_graph_store.py  test_graph_store_extra.py  test_indexer.py  test_indexer_edge_cases.py  test_logging.py  test_metrics.py  test_metrics_cycles.py  test_metrics_god_modules.py  test_metrics_inheritance.py  test_metrics_resolution.py  test_metrics_uses_type.py  test_models.py  test_ratcheting.py  test_semantic.py  test_severity.py  test_silent_mode.py
tests/audit/: test_audit_schema_doc.py  test_cycle_priority.py  test_health_score.py  test_lcom4.py  test_testrisk_joins.py
tests/fixtures/: calls_sample.py  calls_sample.ts  covers_prod.py  js_commonjs.js  python_extras.py  sample.py  sample.ts  test_covers_sample.py
tests/parser/: test_calls.py  test_js_parser.py  test_js_parser_extra.py  test_python_parser.py  test_python_parser_extra.py  test_uses_type.py
