[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debtector"
version = "0.3.1"
description = "Guardarraíl de acoplamiento para CI/PR: detecta ciclos, god modules y regresiones de acoplamiento antes del merge"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter-language-pack>=1.0,!=1.6.3",
    "networkx>=3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
semantic = [
    "sqlite-vec>=0.1.0",
    "fastembed>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "bandit[toml]>=1.7",
    "commitizen>=3.0",
    "pre-commit>=3.0",
]

[project.scripts]
debtector = "debtector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Bandit — security analysis
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests"]
skips = []

# ---------------------------------------------------------------------------
# Commitizen — conventional commits
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
version_files = ["pyproject.toml:version", "src/debtector/__init__.py"]
tag_format = "v$version"
annotated_tag = true  # git push --follow-tags solo sube tags anotados

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=debtector --cov-report=term-missing"
norecursedirs = ["tests/fixtures"]
